Issue #28123: _PyDict_GetItem_KnownHash() now can raise an exception as PyDict_GetItemWithError().  Patch by Xiang Zhang.